feat: Implement a PySide6 graphical user interface and introduce JSON-based configuration management for analysis parameters.